Update fade in on projects title and fix lightning bolt on iphone 8

--- a/src/components/splash/Splash.css
+++ b/src/components/splash/Splash.css
@@ -23,7 +23,7 @@
   transform: rotate(45deg) translate(33px, 11px);
 }
 
-@media screen and (min-width: 350px) and (max-width: 600px) {
+@media screen and (min-width: 350px) and (max-width: 750px) {
   .lightning-bolt {
     max-width: 100px;
     transform: rotate(45deg) translate(28px, 9px);
